// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LoginForm when active renders correctly 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "flexDirection": "column",
      "justifyContent": "center",
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "margin": 10,
      }
    }
  >
    <TextInput
      allowFontScaling={true}
      keyboardType="email-address"
      onChangeText={[Function]}
      placeholder="Email"
      rejectResponderTermination={true}
      style={
        Object {
          "backgroundColor": "rgb(255, 255, 255)",
          "borderRadius": 5,
          "flex": 2,
          "height": 40,
          "padding": 10,
        }
      }
      textContentType="emailAddress"
      underlineColorAndroid="transparent"
      value=""
    />
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "margin": 10,
      }
    }
  >
    <TextInput
      allowFontScaling={true}
      onChangeText={[Function]}
      placeholder="Senha"
      rejectResponderTermination={true}
      secureTextEntry={true}
      style={
        Object {
          "backgroundColor": "rgb(255, 255, 255)",
          "borderRadius": 5,
          "flex": 2,
          "height": 40,
          "padding": 10,
        }
      }
      textContentType="password"
      underlineColorAndroid="transparent"
      value=""
    />
  </View>
  <ButtonSubmit
    display="active"
    label="Entrar"
    onPress={[Function]}
  />
</View>
`;

exports[`LoginForm when loading renders correctly 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "flexDirection": "column",
      "justifyContent": "center",
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "margin": 10,
      }
    }
  >
    <TextInput
      allowFontScaling={true}
      keyboardType="email-address"
      onChangeText={[Function]}
      placeholder="Email"
      rejectResponderTermination={true}
      style={
        Object {
          "backgroundColor": "rgb(255, 255, 255)",
          "borderRadius": 5,
          "flex": 2,
          "height": 40,
          "padding": 10,
        }
      }
      textContentType="emailAddress"
      underlineColorAndroid="transparent"
      value=""
    />
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "margin": 10,
      }
    }
  >
    <TextInput
      allowFontScaling={true}
      onChangeText={[Function]}
      placeholder="Senha"
      rejectResponderTermination={true}
      secureTextEntry={true}
      style={
        Object {
          "backgroundColor": "rgb(255, 255, 255)",
          "borderRadius": 5,
          "flex": 2,
          "height": 40,
          "padding": 10,
        }
      }
      textContentType="password"
      underlineColorAndroid="transparent"
      value=""
    />
  </View>
  <ButtonSubmit
    display="loading"
    label="Entrar"
    onPress={[Function]}
  />
</View>
`;
